Created getFeedbackList endpoint
